--- a/app/src/main/res/color/main_title_selector.xml
+++ b/app/src/main/res/color/main_title_selector.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true" android:color="@color/White"></item>
-    <item android:state_pressed="false" android:color="@color/drak"></item>
-    <item android:color="@color/drak"/>
+    <item android:state_pressed="false" android:color="@color/White"></item>
+    <item android:color="@color/White"/>
 </selector>
