--- a/app/src/main/res/layout/findmusic_layout.xml
+++ b/app/src/main/res/layout/findmusic_layout.xml
@@ -3,7 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swiprefreshlayout"
         android:layout_width="match_parent"
@@ -40,7 +39,7 @@
                                     android:id="@+id/image"
                                     android:layout_width="match_parent"
                                     android:layout_height="match_parent"
-                                    android:src="@mipmap/pic5"
+                                    android:src="@color/White"
                                     android:scaleType="centerCrop"/>
                                 <RelativeLayout
                                     android:id="@+id/title"
