--- a/app/src/main/res/layout/mymusic_layout.xml
+++ b/app/src/main/res/layout/mymusic_layout.xml
@@ -9,16 +9,18 @@
         android:layout_width="match_parent"
         android:layout_height="160dp">
 
-        <View
+        <ImageView
+            android:id="@+id/image"
             android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginTop="190dp"
-            android:background="@color/drak" />
+            android:layout_height="match_parent"
+            android:alpha="0.6"
+            android:scaleType="centerCrop"
+            android:src="@mipmap/pic8" />
 
         <RelativeLayout
             android:id="@+id/mymusic_up"
             android:layout_width="match_parent"
-            android:layout_height="200dp">
+            android:layout_height="match_parent">
 
             <RelativeLayout
                 android:id="@+id/MyMusic_Title"
@@ -56,7 +58,7 @@
 
                 <com.google.android.material.appbar.CollapsingToolbarLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="220dp"
                     app:layout_scrollFlags="scroll|exitUntilCollapsed"
                     app:title=""
                     app:titleEnabled="false">
@@ -66,26 +68,27 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:scaleType="centerCrop"
-                        android:src="@mipmap/pic5" />
+                        android:src="@color/White" />
 
                     <include layout="@layout/mymusic_middle_layout" />
                 </com.google.android.material.appbar.CollapsingToolbarLayout>
             </com.google.android.material.appbar.AppBarLayout>
-                <RelativeLayout
-                    android:id="@+id/my_music_bottom"
+
+            <RelativeLayout
+                android:id="@+id/my_music_bottom"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@id/app_bar"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+                <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+                    android:id="@+id/swiprefreshlayout"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_below="@id/app_bar"
-                    app:layout_behavior="@string/appbar_scrolling_view_behavior">
+                    android:layout_height="match_parent">
 
-                    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-                        android:id="@+id/swiprefreshlayout"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
-
-                        <include layout="@layout/my_music_bottom" />
-                    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
-                </RelativeLayout>
+                    <include layout="@layout/my_music_bottom" />
+                </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+            </RelativeLayout>
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
     </RelativeLayout>
