--- a/app/src/main/res/layout/findvedio_layout.xml
+++ b/app/src/main/res/layout/findvedio_layout.xml
@@ -4,10 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/White">
-    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-        android:id="@+id/swiprefreshlayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -30,13 +26,13 @@
                 <ImageView
                     android:id="@+id/findvedio_background1"
                     android:layout_width="match_parent"
-                    android:layout_height="305dp"
+                    android:layout_height="250dp"
                     android:scaleType="centerCrop"
                     android:src="@color/White" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="300dp"
+                    android:layout_height="250dp"
                     android:orientation="vertical">
 
                     <TextView
@@ -50,20 +46,20 @@
 
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="145dp"
+                        android:layout_height="115dp"
                         android:orientation="horizontal">
 
                         <fm.jiecao.jcvideoplayer_lib.JCVideoPlayerStandard
                             android:id="@+id/player_list_video1"
                             android:layout_width="150dp"
-                            android:layout_height="120dp"
+                            android:layout_height="85dp"
                             android:layout_marginLeft="20dp"
                             android:layout_marginTop="10dp" />
 
                         <fm.jiecao.jcvideoplayer_lib.JCVideoPlayerStandard
                             android:id="@+id/player_list_video2"
                             android:layout_width="150dp"
-                            android:layout_height="120dp"
+                            android:layout_height="85dp"
                             android:layout_marginLeft="18dp"
                             android:layout_marginTop="10dp" />
                     </LinearLayout>
@@ -76,14 +72,14 @@
                         <fm.jiecao.jcvideoplayer_lib.JCVideoPlayerStandard
                             android:id="@+id/player_list_video3"
                             android:layout_width="150dp"
-                            android:layout_height="120dp"
+                            android:layout_height="85dp"
                             android:layout_marginLeft="20dp"
                             android:layout_marginTop="0dp" />
 
                         <fm.jiecao.jcvideoplayer_lib.JCVideoPlayerStandard
                             android:id="@+id/player_list_video4"
                             android:layout_width="150dp"
-                            android:layout_height="120dp"
+                            android:layout_height="85dp"
                             android:layout_marginLeft="18dp"
                             android:layout_marginTop="0dp" />
                     </LinearLayout>
@@ -102,28 +98,35 @@
 
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:fillViewport="true"
             android:overScrollMode="always"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
+
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
-
-                    <ImageView
-                        android:id="@+id/image"
+                    <com.wang.avi.AVLoadingIndicatorView
+                        android:id="@+id/avi"
+                        style="@style/AVLoadingIndicatorView"
+                        android:layout_marginTop="100dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:visibility="visible"
+                        android:layout_centerHorizontal="true"
+                        app:indicatorColor="@color/Red"
+                        app:indicatorName="LineScalePartyIndicator" />
+                    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+                        android:id="@+id/swiprefreshlayout"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:scaleType="centerCrop"
-                        android:src="@color/White" />
-
+                        android:layout_height="match_parent">
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/recyclerview"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent" />
+                    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
                 </RelativeLayout>
         </androidx.core.widget.NestedScrollView>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
-    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 </RelativeLayout>
