--- a/app/src/main/res/layout/test.xml
+++ b/app/src/main/res/layout/test.xml
@@ -3,57 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <!--第一部分：伸缩工具栏-->
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
+  <ImageView
+      android:background="@mipmap/pic23"
+      android:scaleType="centerCrop"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"/>
+    <ImageView
+        android:background="@color/drak"
+        android:scaleType="centerCrop"
+        android:alpha="0.6"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/app_bar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:elevation="0dp">
-
-        <com.google.android.material.appbar.CollapsingToolbarLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed"
-            app:title=""
-            app:titleEnabled="false">
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="220dp"
-                android:background="@mipmap/pic5"
-                android:scaleType="fitXY" />
-
-            <androidx.appcompat.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="46dp"
-                android:minHeight="46dp"
-                app:layout_collapseMode="pin"
-
-                app:title="">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="个人主页"
-                    android:textColor="@android:color/white"
-                    android:textSize="18dp"
-                    android:textStyle="bold" />
-            </androidx.appcompat.widget.Toolbar>
-
-        </com.google.android.material.appbar.CollapsingToolbarLayout>
-
-    </com.google.android.material.appbar.AppBarLayout>
-    <!--第二部分：主要内容-->
- <TextView
-     android:text="FFFFFFFFFFFFF"
-     android:textSize="25dp"
-     android:layout_width="match_parent"
-     android:layout_height="match_parent"
-     app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+        android:layout_height="match_parent"/>
 </RelativeLayout>
