--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -7,9 +7,13 @@
             android:icon="@drawable/music_note"
             android:title="均衡器" />
         <item
-            android:id="@+id/nav_change"
-            android:icon="@drawable/settings"
-            android:title="设置" />
+        android:id="@+id/nav_change"
+        android:icon="@drawable/settings"
+        android:title="设置" />
+        <item
+            android:id="@+id/nav_changess"
+            android:icon="@drawable/help_circle"
+            android:title="换肤" />
     </group>
     <group android:checkableBehavior="single">
         <item android:title="开发者信息">
