--- a/app/src/main/res/layout/history_vedio_item.xml
+++ b/app/src/main/res/layout/history_vedio_item.xml
@@ -26,12 +26,13 @@
                 android:layout_marginTop="10dp"
                 android:ellipsize="marquee"
                 android:focusable="true"
-                android:focusableInTouchMode="true"
+                android:focusableInTouchMode="false"
                 android:marqueeRepeatLimit="marquee_forever"
                 android:singleLine="true"
                 android:textColor="@color/drak"
                 android:textSize="14dp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                />
 
             <TextView
                 android:id="@+id/text2"
